--- a/Code/Mobile/TellMe.Mobile.iOS/Controllers/PlaylistViewController.xib
+++ b/Code/Mobile/TellMe.Mobile.iOS/Controllers/PlaylistViewController.xib
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
@@ -12,16 +12,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PlaylistViewController">
             <connections>
+                <outlet property="ButtonsWrapper" destination="3809" id="D7L-iu-cYb"/>
                 <outlet property="CloseButton" destination="903" id="name-outlet-903"/>
                 <outlet property="NavigationBar" destination="I9v-G0-fDk" id="qq2-59-Wh9"/>
                 <outlet property="NavigationItem" destination="5xV-bk-03U" id="tmg-e9-4Mx"/>
                 <outlet property="NextButton" destination="2737" id="name-outlet-2737"/>
                 <outlet property="PlayerWrapper" destination="1813" id="name-outlet-1813"/>
+                <outlet property="PlayerWrapperTop" destination="8WC-Zc-KlZ" id="5iA-DP-YqP"/>
                 <outlet property="Preview" destination="1846" id="name-outlet-1846"/>
                 <outlet property="PreviousButton" destination="2738" id="name-outlet-2738"/>
+                <outlet property="Spinner" destination="5706" id="name-outlet-5706"/>
                 <outlet property="TableView" destination="XGU-FC-sDk" id="iXn-2R-J4G"/>
                 <outlet property="View" destination="1" id="N3q-AV-Hsl"/>
-                <outlet property="Spinner" destination="5706" id="name-outlet-5706"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -31,10 +33,15 @@
             <subviews>
                 <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I9v-G0-fDk">
                     <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                    <color key="barTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="0.0" green="0.74064149459999995" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="barTintColor" red="0.12839525939999999" green="0.76224476100000005" blue="0.98047024009999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <textAttributes key="titleTextAttributes">
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </textAttributes>
                     <items>
                         <navigationItem title="Playlist" id="5xV-bk-03U">
                             <barButtonItem key="leftBarButtonItem" systemItem="stop" id="903">
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <action selector="CloseButton_Activated:" destination="-1" id="944"/>
                                 </connections>
@@ -50,66 +57,76 @@
                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1813">
                     <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                     <subviews>
-                        <imageView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1846" customClass="Picture" ambiguous="YES">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="500"/>
-                            <color key="backgroundColor" white="0.66666666666666696" alpha="1" colorSpace="calibratedWhite"/>
-                            <constraints>
-                                <constraint firstAttribute="width" secondItem="1846" secondAttribute="height" multiplier="3:4" id="3776"/>
-                            </constraints>
-                        </imageView>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3809" ambiguous="YES">
-                            <rect key="frame" x="0.0" y="500" width="375" height="103"/>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3809">
+                            <rect key="frame" x="10" y="494" width="355" height="99"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2738" ambiguous="YES">
-                                    <rect key="frame" x="112" y="27" width="50" height="50"/>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2738">
+                                    <rect key="frame" x="102.5" y="24.5" width="50" height="50"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="50" id="3631"/>
                                         <constraint firstAttribute="width" secondItem="2738" secondAttribute="height" multiplier="1:1" id="3632"/>
                                     </constraints>
+                                    <color key="tintColor" red="0.12839525939999999" green="0.76224476100000005" blue="0.98047024009999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <state key="normal" image="Prev"/>
                                     <connections>
                                         <action selector="PreviousButton_TouchUpInside:" destination="-1" eventType="touchUpInside" id="3705"/>
                                     </connections>
                                 </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2737" ambiguous="YES">
-                                    <rect key="frame" x="213" y="27" width="50" height="50"/>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2737">
+                                    <rect key="frame" x="202.5" y="24.5" width="50" height="50"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="50" id="3629"/>
                                         <constraint firstAttribute="width" secondItem="2737" secondAttribute="height" multiplier="1:1" id="3630"/>
                                     </constraints>
+                                    <color key="tintColor" red="0.12839525939999999" green="0.76224476100000005" blue="0.98047024009999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <state key="normal" image="Next"/>
                                     <connections>
                                         <action selector="NextButton_TouchUpInside:" destination="-1" eventType="touchUpInside" id="3704"/>
                                     </connections>
                                 </button>
                             </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="backgroundColor" red="0.97637468579999998" green="0.97653776410000004" blue="0.97635322810000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstItem="2737" firstAttribute="centerX" secondItem="3809" secondAttribute="centerX" constant="50" id="3826"/>
                                 <constraint firstAttribute="centerX" secondItem="2738" secondAttribute="centerX" constant="50" id="3827"/>
                                 <constraint firstItem="2738" firstAttribute="centerY" secondItem="3809" secondAttribute="centerY" id="3828"/>
                                 <constraint firstItem="2737" firstAttribute="centerY" secondItem="3809" secondAttribute="centerY" id="3829"/>
-                                <constraint firstAttribute="height" constant="103" id="DOq-jc-K0H" relation="greaterThanOrEqual"/>
+                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="IGQ-xJ-Zma"/>
                             </constraints>
                         </view>
-                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="5706" ambiguous="YES">
-                            <rect key="frame" x="169" y="232" width="37" height="37"/>
+                        <imageView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1846" customClass="Picture">
+                            <rect key="frame" x="10" y="10" width="355" height="473.5"/>
+                            <color key="backgroundColor" white="0.66666666666666696" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint id="5755" firstItem="5706" firstAttribute="height" constant="37"/>
-                                <constraint id="5756" firstAttribute="width" secondItem="5706" secondAttribute="height" multiplier="1:1"/>
+                                <constraint firstAttribute="width" secondItem="1846" secondAttribute="height" multiplier="3:4" id="3776"/>
+                            </constraints>
+                        </imageView>
+                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="5706">
+                            <rect key="frame" x="169" y="228" width="37" height="37"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="37" id="5755"/>
+                                <constraint firstAttribute="width" secondItem="5706" secondAttribute="height" multiplier="1:1" id="5756"/>
                             </constraints>
                         </activityIndicatorView>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="0.92539894580000004" green="0.92555403709999995" blue="0.92537856100000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstItem="3809" firstAttribute="bottom" secondItem="1813" secondAttribute="bottom" id="3821"/>
-                        <constraint firstItem="3809" firstAttribute="width" secondItem="1813" secondAttribute="width" id="3831"/>
-                        <constraint firstItem="1846" firstAttribute="trailing" secondItem="3809" secondAttribute="trailing" id="DrU-ER-L74"/>
-                        <constraint firstItem="1846" firstAttribute="centerX" secondItem="1813" secondAttribute="centerX" id="LBO-3j-buR"/>
-                        <constraint firstItem="3809" firstAttribute="top" secondItem="1846" secondAttribute="bottom" id="dUt-zv-HsC"/>
-                        <constraint firstItem="1846" firstAttribute="leading" secondItem="3809" secondAttribute="leading" id="tNP-Rm-CJG"/>
-                        <constraint id="5753" firstItem="5706" firstAttribute="centerX" secondItem="1846" secondAttribute="centerX"/>
-                        <constraint id="5754" firstItem="5706" firstAttribute="centerY" secondItem="1846" secondAttribute="centerY"/>
+                        <constraint firstItem="3809" firstAttribute="width" secondItem="1846" secondAttribute="width" id="5GQ-MK-cNH"/>
+                        <constraint firstItem="5706" firstAttribute="centerY" secondItem="1846" secondAttribute="centerY" id="73J-Ta-ogO"/>
+                        <constraint firstItem="1846" firstAttribute="centerX" secondItem="1813" secondAttribute="centerX" id="7pp-SA-gE7"/>
+                        <constraint firstItem="1846" firstAttribute="top" secondItem="1813" secondAttribute="top" constant="10" id="SnV-5G-SAT"/>
+                        <constraint firstItem="3809" firstAttribute="top" secondItem="1846" secondAttribute="bottom" constant="10.5" id="epG-pP-5Dp"/>
+                        <constraint firstItem="3809" firstAttribute="centerX" secondItem="1846" secondAttribute="centerX" id="hLo-UT-bcp"/>
+                        <constraint firstItem="1846" firstAttribute="width" secondItem="1813" secondAttribute="width" constant="-20" id="nYt-Mn-d0u"/>
+                        <constraint firstItem="5706" firstAttribute="centerX" secondItem="1846" secondAttribute="centerX" id="tGq-yx-obe"/>
+                        <constraint firstAttribute="bottom" secondItem="3809" secondAttribute="bottom" constant="10" id="xgT-iM-Us8"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yRp-xc-QbF">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="20"/>
+                    <color key="backgroundColor" red="0.12839525939999999" green="0.76224476100000005" blue="0.98047024009999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="20" id="Gv2-xy-KGt"/>
                     </constraints>
                 </view>
             </subviews>
@@ -117,14 +134,17 @@
             <constraints>
                 <constraint firstItem="1813" firstAttribute="width" secondItem="1" secondAttribute="width" id="1843"/>
                 <constraint firstItem="1813" firstAttribute="bottom" secondItem="1" secondAttribute="bottom" id="1844"/>
-                <constraint firstItem="1813" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="1845"/>
-                <constraint firstItem="1813" firstAttribute="top" secondItem="XGU-FC-sDk" secondAttribute="top" id="8WS-Cl-Zst"/>
+                <constraint firstItem="1813" firstAttribute="centerX" secondItem="1" secondAttribute="centerX" id="0b1-lI-ndr"/>
+                <constraint firstItem="yRp-xc-QbF" firstAttribute="width" secondItem="1" secondAttribute="width" id="5fL-d4-RKD"/>
+                <constraint firstItem="1813" firstAttribute="top" secondItem="1" secondAttribute="top" constant="64" id="8WC-Zc-KlZ"/>
+                <constraint firstItem="yRp-xc-QbF" firstAttribute="top" secondItem="1" secondAttribute="top" id="Jwf-An-PzP"/>
                 <constraint firstItem="I9v-G0-fDk" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="Pwy-bt-cMo"/>
                 <constraint firstAttribute="trailing" secondItem="I9v-G0-fDk" secondAttribute="trailing" id="THF-a3-2c0"/>
                 <constraint firstItem="I9v-G0-fDk" firstAttribute="centerX" secondItem="1" secondAttribute="centerX" id="Xw3-5w-sDI"/>
                 <constraint firstAttribute="trailing" secondItem="XGU-FC-sDk" secondAttribute="trailing" id="bi0-NS-Ay1"/>
                 <constraint firstItem="XGU-FC-sDk" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="ewd-ZA-VR8"/>
                 <constraint firstAttribute="bottom" secondItem="XGU-FC-sDk" secondAttribute="bottom" id="lBo-pY-BFH"/>
+                <constraint firstItem="yRp-xc-QbF" firstAttribute="centerX" secondItem="1" secondAttribute="centerX" id="nnw-d1-gjJ"/>
                 <constraint firstItem="XGU-FC-sDk" firstAttribute="top" secondItem="I9v-G0-fDk" secondAttribute="bottom" id="tOZ-mb-7cE"/>
                 <constraint firstItem="I9v-G0-fDk" firstAttribute="top" secondItem="1" secondAttribute="top" constant="20" id="zvH-dr-mgq"/>
             </constraints>
@@ -134,20 +154,5 @@
     <resources>
         <image name="Next" width="50" height="50"/>
         <image name="Prev" width="50" height="50"/>
-        <image name="Contacts" width="192" height="192"/>
-        <image name="Play" width="64" height="64"/>
-        <image name="UserPic" width="36" height="36"/>
-        <image name="Bell" width="25" height="25"/>
-        <image name="Storytellers" width="25" height="25"/>
-        <image name="Account" width="25" height="25"/>
-        <image name="AddGroup" width="25" height="25"/>
-        <image name="Send" width="30" height="30"/>
-        <image name="Comment" width="30" height="30"/>
-        <image name="Replay" width="64" height="64"/>
-        <image name="Heart" width="30" height="30"/>
-        <image name="Heart-O" width="30" height="30"/>
-        <image name="Calendar" width="25" height="25"/>
-        <image name="Playlists" width="25" height="25"/>
-        <image name="Playlist" width="50" height="50"/>
     </resources>
 </document>
