--- a/Code/Mobile/TellMe.Mobile.iOS/Views/Cells/EventCell.xib
+++ b/Code/Mobile/TellMe.Mobile.iOS/Views/Cells/EventCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -23,7 +23,7 @@
                         <rect key="frame" x="10" y="5" width="355" height="150"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="1504" customClass="Label">
-                                <rect key="frame" x="70" y="43" width="225" height="22.5"/>
+                                <rect key="frame" x="70" y="43" width="225" height="20.5"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="lessThanOrEqual" constant="30" id="1588"/>
                                 </constraints>
@@ -86,40 +86,8 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2672" customClass="Button">
-                                <rect key="frame" x="155" y="110.5" width="100" height="30"/>
-                                <color key="backgroundColor" red="0.13725490196078433" green="0.71372549019607845" blue="0.97254901960784312" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="3292"/>
-                                    <constraint firstAttribute="width" constant="100" id="3293"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
-                                <state key="normal" title="Accept">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="AcceptButton_TouchUpInside:" destination="cxk-wN-pdQ" eventType="touchUpInside" id="4398"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3246" customClass="Button">
-                                <rect key="frame" x="265" y="110.5" width="80" height="30"/>
-                                <color key="backgroundColor" red="0.97254901960784312" green="0.97254901960784312" blue="0.97254901960784312" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="3251"/>
-                                    <constraint firstAttribute="width" constant="80" id="3252"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
-                                <state key="normal" title="Skip">
-                                    <color key="titleColor" white="0.33333333333333298" alpha="1" colorSpace="calibratedWhite"/>
-                                    <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="SkipButton_TouchUpInside:" destination="cxk-wN-pdQ" eventType="touchUpInside" id="4448"/>
-                                </connections>
-                            </button>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" delaysContentTouches="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="3760">
-                                <rect key="frame" x="70" y="70.5" width="275" height="30"/>
+                                <rect key="frame" x="70" y="68.5" width="275" height="30"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="3977"/>
@@ -132,6 +100,22 @@
                                 </collectionViewFlowLayout>
                                 <cells/>
                             </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2672" customClass="Button">
+                                <rect key="frame" x="225" y="110" width="120" height="30"/>
+                                <color key="backgroundColor" red="0.13725490196078433" green="0.71372549019607845" blue="0.97254901960784312" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="3292"/>
+                                    <constraint firstAttribute="width" constant="120" id="3293"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                <state key="normal" title="Send Story">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="SendStoryButton_TouchUpInside:" destination="cxk-wN-pdQ" eventType="touchUpInside" id="HJ7-yW-YFC"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.97254901960784312" green="0.97254901960784312" blue="0.97254901960784312" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
@@ -145,14 +129,12 @@
                             <constraint firstItem="1504" firstAttribute="top" secondItem="1405" secondAttribute="bottom" id="1857"/>
                             <constraint firstItem="1504" firstAttribute="leading" secondItem="1405" secondAttribute="leading" id="1858"/>
                             <constraint firstItem="1342" firstAttribute="leading" secondItem="1504" secondAttribute="trailing" constant="10" id="1859"/>
-                            <constraint firstAttribute="trailing" secondItem="3246" secondAttribute="trailing" constant="10" id="3248"/>
                             <constraint firstAttribute="bottom" secondItem="2672" secondAttribute="bottom" constant="10" id="3291"/>
-                            <constraint firstItem="3246" firstAttribute="leading" secondItem="2672" secondAttribute="trailing" constant="10" id="3297"/>
                             <constraint firstItem="3760" firstAttribute="leading" secondItem="1215" secondAttribute="trailing" constant="10" id="3975"/>
                             <constraint firstAttribute="trailing" secondItem="3760" secondAttribute="trailing" constant="10" id="3976"/>
-                            <constraint firstItem="3246" firstAttribute="top" secondItem="3760" secondAttribute="bottom" constant="10" id="5964"/>
-                            <constraint firstItem="2672" firstAttribute="top" secondItem="3246" secondAttribute="top" id="5965"/>
+                            <constraint firstItem="2672" firstAttribute="top" secondItem="3760" secondAttribute="bottom" constant="11.5" id="8v6-rh-aco"/>
                             <constraint firstItem="3760" firstAttribute="top" secondItem="1504" secondAttribute="bottom" constant="5" id="acj-wP-FuR"/>
+                            <constraint firstAttribute="trailing" secondItem="2672" secondAttribute="trailing" constant="10" id="apR-CE-XWG"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -165,14 +147,13 @@
             </tableViewCellContentView>
             <color key="backgroundColor" red="0.90588235294117647" green="0.90588235294117647" blue="0.90588235294117647" alpha="1" colorSpace="calibratedRGB"/>
             <connections>
-                <outlet property="AcceptButton" destination="2672" id="name-outlet-2672"/>
                 <outlet property="AttendeesCollection" destination="3760" id="name-outlet-3760"/>
                 <outlet property="ContentWrapper" destination="1759" id="name-outlet-1759"/>
                 <outlet property="DateDay" destination="1224" id="name-outlet-1224"/>
                 <outlet property="DateMonth" destination="1242" id="name-outlet-1242"/>
                 <outlet property="Description" destination="1504" id="name-outlet-1504"/>
                 <outlet property="ProfilePicture" destination="1342" id="name-outlet-1342"/>
-                <outlet property="SkipButton" destination="3246" id="name-outlet-3246"/>
+                <outlet property="SendStoryButton" destination="2672" id="H8O-Uu-z3x"/>
                 <outlet property="Title" destination="1405" id="name-outlet-1405"/>
             </connections>
             <point key="canvasLocation" x="-37" y="-35"/>
