--- a/Code/Mobile/TellMe.Mobile.iOS/Views/Cells/SlimStoryCell.xib
+++ b/Code/Mobile/TellMe.Mobile.iOS/Views/Cells/SlimStoryCell.xib
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,37 +16,37 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cxk-wN-pdQ" id="YTl-1W-gDM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="63"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="63.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.69999999999999996" translatesAutoresizingMaskIntoConstraints="NO" id="142">
-                        <rect key="frame" x="64" y="20" width="51.5" height="24"/>
+                        <rect key="frame" x="56" y="20" width="51.5" height="24"/>
                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1956" customClass="Picture" image="Playlist">
-                        <rect key="frame" x="10" y="10" width="44.5" height="44.5"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Playlist" translatesAutoresizingMaskIntoConstraints="NO" id="1956" customClass="Picture">
+                        <rect key="frame" x="10" y="14" width="36" height="36"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="44" id="2601"/>
+                            <constraint firstAttribute="height" constant="36" id="2601"/>
                             <constraint firstAttribute="width" secondItem="1956" secondAttribute="height" multiplier="1:1" id="2694"/>
                         </constraints>
                     </imageView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="UserPic" translatesAutoresizingMaskIntoConstraints="NO" id="Wjw-D2-hDa" customClass="Picture">
-                        <rect key="frame" x="320.5" y="10" width="44.5" height="44.5"/>
+                        <rect key="frame" x="335" y="17" width="30" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="44" id="mAl-y9-nV4"/>
+                            <constraint firstAttribute="height" constant="30" id="mAl-y9-nV4"/>
                             <constraint firstAttribute="width" secondItem="Wjw-D2-hDa" secondAttribute="height" multiplier="1:1" id="nCq-kk-oCz"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                <real key="value" value="22"/>
+                                <integer key="value" value="15"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="1956" firstAttribute="top" secondItem="YTl-1W-gDM" secondAttribute="top" constant="10" id="2787"/>
+                    <constraint firstItem="1956" firstAttribute="top" secondItem="YTl-1W-gDM" secondAttribute="top" constant="14" id="2787"/>
                     <constraint firstItem="1956" firstAttribute="leading" secondItem="YTl-1W-gDM" secondAttribute="leading" constant="10" id="2880"/>
                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="1956" secondAttribute="bottom" constant="9" id="2973"/>
                     <constraint firstItem="142" firstAttribute="leading" secondItem="1956" secondAttribute="trailing" constant="10" id="4557"/>
@@ -66,20 +66,7 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="UserPic" width="36" height="36"/>
-        <image name="Contacts" width="192" height="192"/>
-        <image name="Play" width="64" height="64"/>
-        <image name="Bell" width="25" height="25"/>
-        <image name="Storytellers" width="25" height="25"/>
-        <image name="Account" width="25" height="25"/>
-        <image name="AddGroup" width="25" height="25"/>
-        <image name="Send" width="30" height="30"/>
-        <image name="Comment" width="30" height="30"/>
-        <image name="Replay" width="64" height="64"/>
-        <image name="Heart" width="30" height="30"/>
-        <image name="Heart-O" width="30" height="30"/>
-        <image name="Calendar" width="25" height="25"/>
-        <image name="Playlists" width="25" height="25"/>
         <image name="Playlist" width="50" height="50"/>
+        <image name="UserPic" width="36" height="36"/>
     </resources>
 </document>
